Updated ChartJS to use ng2-charts